[package]
name = "ic-cdk-e2e-tests"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
description = "End-to-end tests for the Rust Canister Development Kit"
license = "Apache-2.0"
repository = "https://github.com/dfinity/cdk-rs"

[dependencies]
candid = { git = "https://github.com/ninegua/candid", rev = "ec5d9806c8234a9a78539b8f256814a3bfc3029c" }
cargo_metadata = "0.14.2"
escargot = { version = "0.5.7", features = ["print"] }
ic-cdk = { path = "../src/ic-cdk" }
ic-cdk-macros = { path = "../src/ic-cdk-macros" }
lazy_static = "1.4.0"
serde_bytes = "0.11"

[[bin]]
name = "simple-kv-store"
path = "canisters/simple_kv_store.rs"

[[bin]]
name = "async"
path = "canisters/async.rs"

[[bin]]
name = "reverse"
path = "canisters/reverse.rs"

[[bin]]
name = "api-call"
path = "canisters/api_call.rs"

[dev-dependencies]
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "92e6b0ed36cdc9322a3588f46a8c8c7cc567e143" }
